style: fix for line-height in skills description

--- a/src/index.scss
+++ b/src/index.scss
@@ -573,6 +573,8 @@ hr {
 
         .card-body {
             padding-top: 0;
+            line-height: 1;
+            ;
         }
 
         /*.label {
