--- a/src/index.scss
+++ b/src/index.scss
@@ -74,6 +74,18 @@ $header-font;
     transition: opacity 2s;
 }
 
+.seo-text {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
 /* ===== Scrollbar ===== */
 
 * {
@@ -132,6 +144,7 @@ body {
     background-color: var(--dark1);
 
 
+
     section {
         position: relative;
         display: flex;
@@ -142,10 +155,22 @@ body {
         scroll-snap-align: start;
         padding-top: 5rem;
         padding-bottom: 5rem;
-        padding-inline: 1vw;
+        padding-inline: 2vw;
 
         & > * {
             z-index: 10;
+        }
+
+        @media(width>800px) {
+            padding-inline: 5vw;
+        }
+
+        @media(width>1200px) {
+            padding-inline: 12.5vw;
+        }
+
+        @media(width>1800px) {
+            padding-inline: 15vw;
         }
 
         &:nth-of-type(1n) {
@@ -727,6 +752,7 @@ hr {
 
 form {
     width: 100%;
+    max-width: 800px;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     margin-top: 4rem;
@@ -739,7 +765,6 @@ form {
 
     input.form-control,
     textarea.form-control {
-
         caret-color: var(--accent);
 
         &::placeholder {
@@ -759,7 +784,7 @@ form {
 
     textarea.form-control {
         min-height: 3lh;
-        max-height: 10lh;
+        max-height: 12lh;
         resize: vertical;
         field-sizing: content;
     }
