--- a/src/index.scss
+++ b/src/index.scss
@@ -604,6 +604,10 @@ hr {
         display: flex;
     }
 
+    .animated:has(.card) {
+        display: contents;
+    }
+
     .card {
         margin-bottom: 1rem;
         width: 100%;
@@ -644,6 +648,7 @@ hr {
 
         .card-body {
             padding-top: 0;
+            padding-bottom: 1.25rem;
             line-height: 1;
             text-wrap: balance;
         }
