--- a/src/index.scss
+++ b/src/index.scss
@@ -69,7 +69,7 @@ $header-font;
     right: 0;
     width: min(95vw, 60rem);
     height: 85vw;
-    z-index: 0;
+    z-index: -10;
     opacity: 0.1;
     transition: opacity 2s;
 }
@@ -137,7 +137,7 @@ $header-font;
 
 html {
     scroll-behavior: smooth;
-    scroll-snap-type: y proximity;
+    //scroll-snap-type: y proximity;
 }
 
 @include mobile {
@@ -255,6 +255,10 @@ h2 {
     margin-top: 1rem;
     margin-bottom: 1rem;
     color: #fff;
+
+    @media(min-height:1200px) {
+        margin-bottom: 5vh;
+    }
 }
 
 h1 {
@@ -641,7 +645,7 @@ img.myPic {
 
         .card-body {
             padding-top: 0;
-            padding-bottom: 1.25rem;
+            padding-bottom: 2rem;
             line-height: 1;
             text-wrap: balance;
         }
